añado valicadaciones del formulario en JavaScript

--- a/modificar-cita.html
+++ b/modificar-cita.html
@@ -30,6 +30,28 @@
     </header>
     <!--CUERPO PRINCIPAL-->
     <main>
+      <table id="tabla-citas">
+        <thead>
+          <tr>
+            <th>NID</th>
+            <th>Nombre completo</th>
+            <th>Fecha cita</th>
+            <th>Teléfono</th>
+            <th>Info</th>
+            <th>Modificar cita</th>
+            <th>Eliminar cita</th>
+          </tr>
+        </thead>
+          <tbody>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+          </tbody>
+      </table>
       
     </main>
     <!--PIE DE PÁGINA-->
