--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Página web de citas de la clínica dental MedacDent"
-    />
+    <meta name="description" content="Página web de citas de la clínica dental MedacDent"/>
     <meta name="keywords" content="citas,clinicadental" />
     <meta name="author" content="Guadalupe Cano" />
     <title>MedacDent</title>
@@ -39,8 +36,8 @@
             ><strong>Añadir nueva cita</strong></a
           >
         </div>
-        <div id="modificar-cita">
-          <a tabindex="0" href="modificar-cita.html"
+        <div id="citas-registradas">
+          <a tabindex="0" href="citas-registradas.html"
             ><strong>Modificar cita</strong></a
           >
         </div>
@@ -55,9 +52,9 @@
         </a>
       </div>
       <address id="contacto">
-        <p>Contacto: 123-456-7890 |</p>
+        <p>Contacto: 600121212 |</p>
         <p>clinidental@medacDent.com |</p>  
-        <p>Dirección: Calle Ejemplo 123, Ciudad</p>
+        <p>Dirección: Calle Ejemplo 123, Córdoba</p>
       </address>
       <div id="social">
         <a href="https://www.facebook.com" target="_blank">
